fixed z-index of notification

--- a/static/assets/styles/home.css
+++ b/static/assets/styles/home.css
@@ -123,7 +123,7 @@ header.shadow {
     color: #fff;
     display: flex;
     flex-direction: column;
-    z-index: 7777;
+    z-index: 5555;
     justify-content: space-between;
 }
 
